T-7825 theme/standard,theme/totara: Updated 2 24-bit png icons and spacing in standard which fixed IE6/7 spacing for totara too.
Reviewed-on: http://review.dev.totaralms.com/296
Tested-by: Totara Hudson <totara-hudson@catalyst.net.nz>

--- a/theme/standard/styles_ie6.css
+++ b/theme/standard/styles_ie6.css
@@ -153,3 +153,12 @@ div.totara-dialog #dialog-search-table select#id_frameworkid.totara-expanded-wid
 	height:32px;
 }
 
+
+/**
+ * Report builder
+ **/
+.reportbuilder-table .c0 img,
+.reportbuilder-table .c1 img {
+	float:left;
+	margin-top:2px;
+}
